--- a/scss/_hb-menu.scss
+++ b/scss/_hb-menu.scss
@@ -65,7 +65,8 @@
       flex: none;
       width: 80%;
       height: 2px;
-      background: #fff;
+      background: $main-color;
+      box-shadow: 0 0 10px $dark-color;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -76,6 +77,7 @@
       &:after {
         content: '';
         position: absolute;
+        box-shadow: 0 0 10px $dark-color;
         z-index: 1;
         top: -10px;
         width: 100%;
