--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -63,6 +63,12 @@
   }
 }
 
+.pt {
+  &-1 {
+    padding-top: 1rem;
+  }
+}
+
 // Margin
 .my {
   &-1 {
@@ -107,6 +113,11 @@
 
 .grid {
   display: grid;
+  grid-gap: 0.5rem;
+}
+
+.grid-w-aside {
+  display: grid;
 
   aside {
     text-align: center;
@@ -118,5 +129,41 @@
     p.bold {
       padding-top: 1rem;
     }
+  }
+}
+
+.social {
+  padding-top: 1rem;
+
+  a:first-of-type {
+    margin-right: 1rem;
+  }
+
+  a:hover {
+    color: inherit;
+  }
+
+  .fab {
+    border: 2px $main-color solid;
+    border-radius: 50%;
+    height: 20px;
+    width: 20px;
+    line-height: 20px;
+    text-align: center;
+    padding: 0.5rem;
+    cursor: pointer;
+
+    &:hover {
+      background: #fff;
+      transition: background ease-in-out 0.1s;
+    }
+  }
+  .fa-facebook:hover {
+    color: #1877f2;
+    transition: color ease-in-out 0.1s;
+  }
+  .fa-instagram:hover {
+    color: #833ab4;
+    transition: color ease-in-out 0.1s;
   }
 }
