--- a/scss/main.css
+++ b/scss/main.css
@@ -185,19 +185,19 @@ img {
 
 .hb-menu-wrap .toggler:checked + .hamburger > div {
   -webkit-transform: rotate(135deg);
-          transform: rotate(135deg);
+  transform: rotate(135deg);
 }
 
 .hb-menu-wrap .toggler:checked + .hamburger > div:before,
 .hb-menu-wrap .toggler:checked + .hamburger > div:after {
   top: 0;
   -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 
 .hb-menu-wrap .toggler:checked:hover + .hamburger > div {
   -webkit-transform: rotate(225deg);
-          transform: rotate(225deg);
+  transform: rotate(225deg);
 }
 
 .hb-menu-wrap .toggler:checked ~ .menu {
@@ -206,9 +206,9 @@ img {
 
 .hb-menu-wrap .toggler:checked ~ .menu > div {
   -webkit-transform: scale(1);
-          transform: scale(1);
+  transform: scale(1);
   -webkit-transition-duration: 0.75s;
-          transition-duration: 0.75s;
+  transition-duration: 0.75s;
 }
 
 .hb-menu-wrap .toggler:checked ~ .menu > div > div {
@@ -229,19 +229,19 @@ img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   /* Hamburger Line */
 }
 
 .hb-menu-wrap .hamburger > div {
   position: relative;
   -webkit-box-flex: 0;
-      -ms-flex: none;
-          flex: none;
+  -ms-flex: none;
+  flex: none;
   width: 80%;
   height: 2px;
   background: #fff;
@@ -249,18 +249,19 @@ img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
   /* Hamburger Lines - Top & Bottom */
   /* Moves Line Down */
 }
 
-.hb-menu-wrap .hamburger > div:before, .hb-menu-wrap .hamburger > div:after {
+.hb-menu-wrap .hamburger > div:before,
+.hb-menu-wrap .hamburger > div:after {
   content: '';
   position: absolute;
   z-index: 1;
@@ -286,11 +287,11 @@ img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .hb-menu-wrap .menu > div {
@@ -302,16 +303,16 @@ img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-flex: 0;
-      -ms-flex: none;
-          flex: none;
+  -ms-flex: none;
+  flex: none;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-transform: scale(0);
-          transform: scale(0);
+  transform: scale(0);
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
@@ -366,8 +367,8 @@ img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -406,7 +407,7 @@ img {
   width: 0.7rem;
   font-weight: bold;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   padding: 1.2rem 0.2rem 1.2rem 0.4rem;
   cursor: pointer;
   opacity: 0.5;
@@ -428,7 +429,7 @@ img {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   padding: 0;
   width: 60%;
   margin: 0 auto;
@@ -463,7 +464,7 @@ img {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 0.2rem;
   padding: 1rem 0.2rem;
 }
@@ -478,14 +479,14 @@ img {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 1rem;
 }
 
@@ -546,7 +547,7 @@ img {
 @media (min-width: 768px) {
   .grid {
     -ms-grid-columns: 5fr 2fr;
-        grid-template-columns: 5fr 2fr;
+    grid-template-columns: 5fr 2fr;
     grid-gap: 1.5rem;
   }
   .grid aside {
@@ -563,18 +564,18 @@ img {
   }
   #menu .menu-img-container {
     -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
   }
   #catering .catering-img-container {
     -ms-grid-columns: 1fr 1fr 1fr;
-        grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
   }
   #bagels .grid > div img {
     width: 50%;
   }
   #bagels .grid aside .flavors-container {
     -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
   }
 }
 /*# sourceMappingURL=main.css.map */
