--- a/scss/_image-carousel.scss
+++ b/scss/_image-carousel.scss
@@ -14,6 +14,7 @@ $height: 45vh;
     transition: left 0.25s ease-out;
 
     img {
+      object-fit: cover;
       width: $width;
       height: $height;
     }
