--- a/scss/_image-carousel.scss
+++ b/scss/_image-carousel.scss
@@ -28,6 +28,7 @@ $height: 45vh;
     left: 0;
     right: 0;
     margin-bottom: 0.4rem;
+    z-index: 4;
 
     .bubble {
       margin: 2.5px;
@@ -64,6 +65,7 @@ $height: 45vh;
     cursor: pointer;
     opacity: 0.5;
     transition: opacity 0.1s linear;
+    z-index: 4;
   }
 
   .next:hover::after,
